@@ -2,6 +2,8 @@ Upcoming:
 - Various improvements to the configuration GUI. The preview is now larger too
 - Removed several config options that no longer work or are no longer relevant
 - Cleaned up a lot of code
+- The spawn configuration options are back
+- Added forceSpawnInBuilding to force the spawn inside a building (might fail if there is no building near spawn)
 
 1.18-5.2.6:
 - New system to control city rarity based on perlin maps. If the cityChance setting is -1 then cityPerlinScale and cityPerlinOffset will be used for a more natural city style
